Realignment, IE8 issues
Align top bar for screen width < 768px, IE8 JavaScript error and
duplicate textboxes (due to no support of range sliders), goofy extra
spacing in onchange="" attribute in some HTML elements

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -109,7 +109,7 @@ hr {
 
 #formula_selector {
 	max-width: $w-column;
-	margin: 0;
+	margin: 0 auto;
 	
 	@media screen and (max-width: $ref-w-phone) {
 		margin-left: 20px; margin-right: 20px;
